Fixing collapsing Cover block

--- a/.build/assets/styles/___components/_main.scss
+++ b/.build/assets/styles/___components/_main.scss
@@ -2,7 +2,7 @@ body {
 	--main--max-width: 70rem;
 
 	@media screen and (min-width: 72.5em) and (max-width: 100em) {
-		--wp--custom--spacing-outer-gutter: 0;
+		--wp--custom--spacing-outer-gutter: 1px;
 	}
 
 	@media screen and (min-width: 100em) {
